files/istio/test_go_istio.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: test-go
  labels:
    app: test-go
spec:
  ports:
  - port: 8080
    name: http
  selector:
    app: test-go
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: test-go-v1
spec:
  replicas: 1
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: "true"
      labels:
        app: test-go
        version: v1
    spec:
      containers:
      - name: test-go
        image: quay.io/hongkailiu/test-go:http-0.0.10
        command: ["/http"]
        args: ["start", "-v"]
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: test-go-v2
spec:
  replicas: 1
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: "true"
      labels:
        app: test-go
        version: v2
    spec:
      containers:
      - name: test-go
        image: quay.io/hongkailiu/test-go:http-0.0.10
        command: ["/http"]
        args: ["start", "-v"]
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
