files/istio/test_go_gateway.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: test-go-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: test-go
spec:
  hosts:
  - "*"
  gateways:
  - test-go-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: test-go
        port:
          number: 8080
